<resources>
    <string name="app_name">WhatAppsLike</string>
    <string name="empty_chat_msg">You don\'t have any messages in this conversation yet, time to start it up!</string>
    <string name="random_long_text">Sent Random Text : Hey Hello Fine be GoO O  OM OM </string>
    <string name="no_internet_msg">Oops , No Internet Connection, You need to be connected to access this page</string>
    <string name="no_chat_msg">you did not write or receive any message for the moment.</string>
    <string name="now">Now</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="group_chat_hint">Set a title For this Group</string>
    <string name="group_name">Group Name</string>
    <string name="type_a_message">Type a Message</string>
    <string name="enable_group_chatting">Enable Group Chatting</string>
    <string name="disable_group_chatting">Disable Group Chatting</string>
    <string name="group_chat_enabled_msg">You Enabled Group Chatting , You need to Choose more than one user</string>
    <string name="chats">CHATS</string>
    <string name="list_refresh_msg">Refreshing The list</string>
    <string name="no_conversations_here">NO Conversations Here.</string>
    <string name="no_chats_here">No Chats Here</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="reload">Reload</string>
    <string name="register_page">REGISTER PAGE</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="you_have_account_msg">You have an account ? Log in Here</string>
    <string name="log_in">Log in</string>
    <string name="login_page">LOGIN PAGE</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="don_t_have_an_account_msg">Don\'t have an account ?</string>
    <string name="disable_group_chatting_msg">You Disabled Group Chatting</string>
    <string name="error_different_passwords_msg">The Two passwords are not The same</string>
    <string name="password_not_valid_msg">The password is  not Valid</string>
    <string name="empty_field_msg">You Should Type Your Information</string>
</resources>