<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:gravity="center">

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_large"
        android:text="@string/register_page"
        android:textStyle="bold"
        android:padding="@dimen/spacing_normal"
        android:layout_margin="@dimen/spacing_normal"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:hintAnimationEnabled="true"
        android:autofillHints="Name"
        android:hint="@string/name"
        style="@style/style_text_input_style">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="2"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/style_text_input_style"
        app:hintAnimationEnabled="true"
        android:autofillHints="Email"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="2"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        android:autofillHints="Password"
        android:hint="@string/password"
        style="@style/style_text_input_style">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        android:autofillHints="Password"
        android:hint="@string/confirm_password"
        style="@style/style_text_input_style">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_confirm_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/user_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        style="@style/style_login_btn"/>

    <TextView
        android:id="@+id/register_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_normal"
        android:text="@string/you_have_account_msg"
        android:textStyle="bold"
        android:padding="@dimen/spacing_small"
        android:layout_margin="@dimen/spacing_small"/>

    <Button
        android:id="@+id/register_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        style="@style/style_login_btn"/>

</LinearLayout>